--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     #bird {
       position: absolute;
-      width: 150px;
+      width: 200px;
       top: 20px;
-      left: 20px;
+      right: 20px; /* bắt đầu từ góc phải */
       transition: all 0.5s ease-in-out;
     }
 
@@ -43,7 +43,11 @@
     const message = document.getElementById("message");
 
     let moveCount = 0;
-    const maxMoves = 5;
+    const maxMoves = 10;
+
+    // Thiết lập ban đầu ở góc trên phải
+    bird.style.top = "20px";
+    bird.style.left = `${window.innerWidth - 170}px`;
 
     function randomPosition() {
       const maxX = window.innerWidth - 150;
