--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #f6e9ee;
+      background-color: #ffe6f0;
       height: 100vh;
       overflow: hidden;
       font-family: 'Courier New', monospace;
@@ -43,22 +43,28 @@
     const message = document.getElementById("message");
 
     let moveCount = 0;
-    const maxMoves = 20;
+    const maxMoves = 10;
 
-    // Bắt đầu ở góc phải trên
     let currentX = window.innerWidth - 170;
     let currentY = 20;
     bird.style.left = `${currentX}px`;
     bird.style.top = `${currentY}px`;
 
-    function smallRandomDelta(range) {
-      return (Math.random() - 0.5) * 2 * range;
+    function biasedDeltaX() {
+      const range = 200;
+      const bias = -0.7; // thiên lệch sang trái (âm)
+      const random = Math.random(); // [0,1)
+      return (random + bias) * range; // thiên về âm
+    }
+
+    function randomDeltaY() {
+      return (Math.random() - 0.5) * 2 * 100; // ±80
     }
 
     function moveBird() {
       if (moveCount < maxMoves) {
-        const deltaX = smallRandomDelta(300); // bay ngắn trong khoảng ±100px
-        const deltaY = smallRandomDelta(100);
+        const deltaX = biasedDeltaX();
+        const deltaY = randomDeltaY();
 
         currentX = Math.min(window.innerWidth - 150, Math.max(0, currentX + deltaX));
         currentY = Math.min(window.innerHeight - 150, Math.max(0, currentY + deltaY));
@@ -69,7 +75,7 @@
         moveCount++;
         setTimeout(moveBird, 500);
       } else {
-        // Bay vào giữa màn hình
+        // Đưa chim vào giữa màn hình
         const centerX = (window.innerWidth - 150) / 2;
         const centerY = (window.innerHeight - 150) / 2;
         bird.style.left = `${centerX}px`;
