--- a/index.html
+++ b/index.html
@@ -11,14 +11,53 @@
       height: 100vh;
       overflow: hidden;
       font-family: 'Courier New', monospace;
+      position: relative;
+    }
+
+    #welcomeScreen {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-color: #ffe6f0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 10;
+    }
+
+    #welcomeImg {
+      width: 300px;
+      margin-bottom: 20px;
+    }
+
+    #startBtn {
+      padding: 12px 20px;
+      font-size: 18px;
+      background-color: #ff66a3;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      display: none;
+      animation: blink 1s infinite;
+    }
+
+    @keyframes blink {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0.5; }
     }
 
     #bird {
       position: absolute;
       width: 150px;
-      top: 20px;
-      left: calc(100% - 170px); /* bắt đầu góc phải */
+      display: none;
       transition: all 0.5s ease-in-out;
+    }
+
+    #flapSound {
+      position: absolute;
+      display: none;
     }
 
     #message {
@@ -35,38 +74,66 @@
   </style>
 </head>
 <body>
+
+  <!-- Màn hình chào đầu tiên -->
+  <div id="welcomeScreen">
+    <img id="welcomeImg" src="Xinchao.gif" alt="Xin chào" />
+    <button id="startBtn">Click vào đây nha</button>
+  </div>
+
+  <!-- Video tiếng vỗ cánh -->
+  <video id="flapSound" src="dapcanh.mp4" autoplay></video>
+
+  <!-- Ảnh chim bồ câu -->
   <img id="bird" src="bocauduathu.gif" alt="Chim bồ câu đưa thư" />
+
+  <!-- Lời nhắn -->
   <div id="message">Thảo ơi cậu có thư này!</div>
 
   <script>
+    const welcomeScreen = document.getElementById("welcomeScreen");
+    const startBtn = document.getElementById("startBtn");
     const bird = document.getElementById("bird");
     const message = document.getElementById("message");
+    const flapSound = document.getElementById("flapSound");
 
-    const maxMoves = 30;
     let moveCount = 0;
+    const maxMoves = 30;
 
     let currentX = window.innerWidth - 170;
     let currentY = 30;
 
-    bird.style.left = `${currentX}px`;
-    bird.style.top = `${currentY}px`;
-
     const centerX = (window.innerWidth - 150) / 2;
     const centerY = (window.innerHeight - 150) / 2;
+
+    // Delay hiển thị nút sau 1s
+    window.onload = () => {
+      setTimeout(() => {
+        startBtn.style.display = "inline-block";
+      }, 1000);
+    };
+
+    // Khi nhấn vào nút "Click vào đây nha"
+    startBtn.addEventListener("click", () => {
+      welcomeScreen.style.display = "none";      // Ẩn giao diện chào
+      bird.style.display = "block";              // Hiện chim
+      flapSound.style.display = "block";         // Bắt đầu tiếng vỗ cánh
+      flapSound.play();                          // Phát video âm thanh
+      bird.style.left = `${currentX}px`;
+      bird.style.top = `${currentY}px`;
+      moveBird();                                // Bắt đầu bay
+    });
 
     function moveBird() {
       if (moveCount < maxMoves) {
         let deltaX, deltaY;
 
         if (moveCount < maxMoves / 2) {
-          // Giai đoạn 1: bay tự do nhưng có xu hướng đi xuống
-          deltaX = (Math.random() - 0.7) * 100; // thiên lệch sang trái
-          deltaY = Math.random() * 40;         // chỉ đi xuống
+          deltaX = (Math.random() - 0.7) * 100;  // lệch trái
+          deltaY = Math.random() * 40;          // xuống dưới
         } else {
-          // Giai đoạn 2: hội tụ dần về giữa màn hình (đi lên)
           const toCenterX = centerX - currentX;
           const toCenterY = centerY - currentY;
-
           deltaX = toCenterX * 0.2 + (Math.random() - 0.5) * 40;
           deltaY = toCenterY * 0.2 + (Math.random() - 0.5) * 30;
         }
@@ -74,7 +141,6 @@
         currentX += deltaX;
         currentY += deltaY;
 
-        // Giới hạn trong khung màn hình
         currentX = Math.min(window.innerWidth - 150, Math.max(0, currentX));
         currentY = Math.min(window.innerHeight - 150, Math.max(0, currentY));
 
@@ -84,17 +150,21 @@
         moveCount++;
         setTimeout(moveBird, 300);
       } else {
-        // Dừng chính xác ở giữa màn hình
+        // Dừng chính giữa
         bird.style.left = `${centerX}px`;
         bird.style.top = `${centerY}px`;
 
+        // Dừng âm thanh
+        flapSound.pause();
+        flapSound.currentTime = 0;
+        flapSound.style.display = "none";
+
+        // Hiện lời nhắn
         setTimeout(() => {
           message.style.opacity = 1;
         }, 800);
       }
     }
-
-    window.onload = moveBird;
   </script>
 </body>
 </html>
