--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <!-- Màn hình chào đầu tiên -->
   <div id="welcomeScreen">
-    <img id="welcomeImg" src="Xinchao.gif" alt="Xin chào" />
+    <img id="welcomeImg" src="xinchao.gif" alt="Xin chào" />
     <button id="startBtn">Click vào đây nha</button>
   </div>
 
