--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #faf3f6;
+      background-color: #cdf5f8;
       height: 100vh;
       overflow: hidden;
       font-family: 'Courier New', monospace;
