--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     #startBtn {
       padding: 12px 20px;
       font-size: 18px;
-      background-color: #ff66a3;
+      background-color: #fbe6ee;
       color: white;
       border: none;
       border-radius: 8px;
