--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
     #nha {
       position: absolute;
-      width: 350px;
-      height: 350px;
+      width: 550px;
+      height: 550px;
       left: 30px;
       top: calc(50% - 175px); /* căn giữa chiều cao */
       z-index: 1;
@@ -106,7 +106,7 @@
 
   <!-- Nhà và hòm thư -->
   <img id="nha" src="nha22.png" alt="Ngôi nhà" />
-  <img id="homthu" src="homthu.jpg" alt="Hòm thư" />
+  <img id="homthu" src="homthu.png" alt="Hòm thư" />
 
   <!-- Chim bồ câu -->
   <img id="bird" src="bocauduathu.gif" alt="Chim bồ câu đưa thư" />
