--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #fce9f2;
+      background-color: #d6eef8;
       height: 100vh;
       overflow: hidden;
       font-family: 'Courier New', monospace;
@@ -34,7 +34,7 @@
     #startBtn {
       padding: 12px 20px;
       font-size: 18px;
-      background-color: #ff66a3;
+      background-color: #d3f3fa;
       color: white;
       border: none;
       border-radius: 8px;
@@ -81,7 +81,7 @@
     left: 60px;
     z-index: 0;
     } 
-    
+
     #dammay {
       position: absolute;
       width: 250px;
