--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      background-color: #ffe6f0;
+      background-color: #d6eef8;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -34,7 +34,7 @@
     #startBtn {
       padding: 12px 20px;
       font-size: 18px;
-      background-color: #d3f3fa;
+      background-color: #efa2cf;
       color: white;
       border: none;
       border-radius: 8px;
