--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <img id="nha" src="nha222.png" alt="Ngôi nhà" />
   <img id="homthu" src="homthu.png" alt="Hòm thư" />
   <img id="mattroi" src="mattroi.gif" alt="Mặt trời" />
-  <img id="dammay" src="dammay.png" alt="Đám mây" />
+  <img id="dammay" src="may23.png" alt="Đám mây" />
   <!-- Chim bồ câu -->
   <img id="bird" src="bocauduathu.gif" alt="Chim bồ câu đưa thư" />
 
