--- a/index.html
+++ b/index.html
@@ -90,6 +90,14 @@
       left: calc(50% + 50px); /* lệch phải so với hòm thư */
       z-index: 0;
     }
+    #dammay2 {
+      position: absolute;
+      width: 250px;
+      height: 150px;
+      top: 10px; /* cao hơn dammay (damay dùng top: 30px) */
+      left: calc(50% - 180px); /* nằm trái dammay */
+      z-index: 0;
+    }
     #flapSound {
       position: absolute;
       display: none;
@@ -125,6 +133,7 @@
   <img id="homthu" src="homthu.png" alt="Hòm thư" />
   <img id="mattroi" src="mattroi.gif" alt="Mặt trời" />
   <img id="dammay" src="may23.png" alt="Đám mây" />
+  <img id="dammay2" src="dammay2.png" alt="Đám mây 2" />
   <!-- Chim bồ câu -->
   <img id="bird" src="bocauduathu.gif" alt="Chim bồ câu đưa thư" />
 
