--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
       z-index: 1;
     }
 
+    #honuoc {
+      position: absolute;
+      width: 300px;
+      height: 300px;
+      bottom: 0;
+      right: 0;
+      z-index: 0;
+    }
+    
     #homthu {
       position: absolute;
       width: 200px;
@@ -134,6 +143,8 @@
   <img id="mattroi" src="mattroi.gif" alt="Mặt trời" />
   <img id="dammay" src="may23.png" alt="Đám mây" />
   <img id="dammay2" src="dammay2.png" alt="Đám mây 2" />
+  <img id="honuoc" src="honuoc.png" alt="Hồ nước" />
+
   <!-- Chim bồ câu -->
   <img id="bird" src="bocauduathu.gif" alt="Chim bồ câu đưa thư" />
 
