--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #f9e3f2;
+      background-color: #f8f1f6;
       height: 100vh;
       overflow: hidden;
       font-family: 'Courier New', monospace;
@@ -18,7 +18,7 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      background-color: #f9e3f2;
+      background-color: #f8f1f6;
       display: flex;
       flex-direction: column;
       align-items: center;
