--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   <!-- Màn hình chào đầu tiên -->
   <div id="welcomeScreen">
     <img id="welcomeImg" src="hellocutee.gif" alt="Xin chào" />
-    <button id="startBtn">Click vào đây nha</button>
+    <button id="startBtn">Click vào chỗ này nè !!</button>
   </div>
 
   <!-- Nhà và hòm thư -->
