--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   <audio id="bellSound" src="tiengchuong.mp3"></audio>
 
   <!-- Lời nhắn -->
-  <div id="message">Thảo ơi cậu có thư này!</div>
+  <div id="message">Thảo ơi ! cậu có thư này💌!</div>
   <button id="openLetterBtn">Ấn vào đây để mở thư nha</button>
   <img id="letterPaper" src="paper.jpg" alt="Nội dung thư" />
   <script>
