--- a/index.html
+++ b/index.html
@@ -48,12 +48,19 @@
       50% { opacity: 0.5; }
     }
 
+    #mainScreen {
+      transition: opacity 1s ease;
+    }
+    .fade-out {
+      opacity: 0;
+    }
+
     #nha {
       position: absolute;
       width: 550px;
       height: 550px;
       left: 30px;
-      top: calc(25% - 175px); /* căn giữa chiều cao */
+      top: calc(25% - 175px);
       z-index: 1;
     }
 
@@ -82,44 +89,43 @@
       transition: all 0.5s ease-in-out;
       z-index: 2;
     }
+
     #mattroi {
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    top: 40px;
-    left: 60px;
-    z-index: 0;
-    } 
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      top: 40px;
+      left: 60px;
+      z-index: 0;
+    }
+
+    #dammay, #dammay2 {
+      position: absolute;
+      width: 250px;
+      height: 150px;
+      z-index: 0;
+    }
 
     #dammay {
-      position: absolute;
-      width: 250px;
-      height: 150px;
       top: 30px;
-      left: calc(50% + 50px); /* lệch phải so với hòm thư */
-      z-index: 0;
+      left: calc(50% + 50px);
     }
+
     #dammay2 {
-      position: absolute;
-      width: 250px;
-      height: 150px;
-      top: 10px; /* cao hơn dammay (damay dùng top: 30px) */
-      left: calc(50% - 250px); /* nằm trái dammay */
-      z-index: 0;
+      top: 10px;
+      left: calc(50% - 250px);
     }
-    #flapSound {
-      position: absolute;
-      display: none;
-    }
+
     #thongbao {
       position: absolute;
       width: 200px;
       height: 150px;
       bottom: 100px;
-      right: 350px; /* nằm bên trái ảnh hồ nước (300px + khoảng cách) */
+      right: 350px;
       display: none;
       z-index: 1;
     }
+
     #message {
       position: absolute;
       width: 100%;
@@ -131,6 +137,7 @@
       opacity: 0;
       transition: opacity 1s ease-in-out;
     }
+
     #openLetterBtn {
       position: absolute;
       top: 82%;
@@ -147,6 +154,7 @@
       animation: blink 1s infinite;
       z-index: 5;
     }
+
     #letterPaper {
       position: absolute;
       width: 500px;
@@ -155,41 +163,46 @@
       left: 50%;
       transform: translate(-50%, -50%);
       display: none;
+      opacity: 0;
+      transition: opacity 1s ease;
       z-index: 10;
-    }   
+    }
+
+    #letterPaper.show {
+      display: block;
+      opacity: 1;
+    }
+
     audio, video {
       display: none;
     }
   </style>
 </head>
 <body>
-
-  <!-- Màn hình chào đầu tiên -->
   <div id="welcomeScreen">
     <img id="welcomeImg" src="hellocutee.gif" alt="Xin chào" />
     <button id="startBtn">Click vào chỗ này nè !!</button>
   </div>
 
-  <!-- Nhà và hòm thư -->
-  <img id="nha" src="nha222.png" alt="Ngôi nhà" />
-  <img id="homthu" src="homthu.png" alt="Hòm thư" />
-  <img id="mattroi" src="mattroi.gif" alt="Mặt trời" />
-  <img id="dammay" src="may23.png" alt="Đám mây" />
-  <img id="dammay2" src="dammay2.png" alt="Đám mây 2" />
-  <img id="honuoc" src="honuoc.png" alt="Hồ nước" />
-  <img id="thongbao" src="thongbao.png" alt="Thông báo" />
+  <div id="mainScreen">
+    <img id="nha" src="nha222.png" alt="Ngôi nhà" />
+    <img id="homthu" src="homthu.png" alt="Hòm thư" />
+    <img id="mattroi" src="mattroi.gif" alt="Mặt trời" />
+    <img id="dammay" src="may23.png" alt="Đám mây" />
+    <img id="dammay2" src="dammay2.png" alt="Đám mây 2" />
+    <img id="honuoc" src="honuoc.png" alt="Hồ nước" />
+    <img id="thongbao" src="thongbao.png" alt="Thông báo" />
+    <img id="bird" src="bocauduathu.gif" alt="Chim bồ câu" />
+    <div id="message">Thảo ơi! cậu có thư này📬!</div>
+  </div>
 
-  <!-- Chim bồ câu -->
-  <img id="bird" src="bocauduathu.gif" alt="Chim bồ câu đưa thư" />
-
-  <!-- Âm thanh -->
   <video id="flapSound" src="dapcanh.mp3" autoplay></video>
   <audio id="bellSound" src="tiengchuong.mp3"></audio>
+  <audio id="helloSound" src="hello.mp3"></audio>
 
-  <!-- Lời nhắn -->
-  <div id="message">Thảo ơi! cậu có thư này💌!</div>
   <button id="openLetterBtn">Ấn vào đây để mở thư nha</button>
   <img id="letterPaper" src="paper.jpg" alt="Nội dung thư" />
+
   <script>
     const welcomeScreen = document.getElementById("welcomeScreen");
     const startBtn = document.getElementById("startBtn");
@@ -197,22 +210,22 @@
     const message = document.getElementById("message");
     const flapSound = document.getElementById("flapSound");
     const bellSound = document.getElementById("bellSound");
+    const helloSound = document.getElementById("helloSound");
     const homthu = document.getElementById("homthu");
     const openLetterBtn = document.getElementById("openLetterBtn");
     const letterPaper = document.getElementById("letterPaper");
+    const mainScreen = document.getElementById("mainScreen");
+
     let moveCount = 0;
     const maxMoves = 30;
-
     let currentX = window.innerWidth - 170;
     let currentY = 30;
 
     const mailboxX = homthu.offsetLeft;
     const mailboxY = homthu.offsetTop;
+    const finalX = mailboxX + 25;
+    const finalY = mailboxY - 80;
 
-    const finalX = mailboxX + 25; // để chim căn giữa trên hộp thư
-    const finalY = mailboxY - 80; // chim đậu phía trên hộp thư
-
-    // Hiện nút sau 1s
     window.onload = () => {
       setTimeout(() => {
         startBtn.style.display = "inline-block";
@@ -220,6 +233,7 @@
     };
 
     startBtn.addEventListener("click", () => {
+      helloSound.play();
       welcomeScreen.style.display = "none";
       bird.style.display = "block";
       flapSound.style.display = "block";
@@ -232,7 +246,6 @@
     function moveBird() {
       if (moveCount < maxMoves) {
         let deltaX, deltaY;
-
         if (moveCount < maxMoves / 2) {
           deltaX = (Math.random() - 0.7) * 100;
           deltaY = Math.random() * 40;
@@ -242,53 +255,38 @@
           deltaX = toCenterX * 0.2 + (Math.random() - 0.5) * 40;
           deltaY = toCenterY * 0.2 + (Math.random() - 0.5) * 30;
         }
-
         currentX += deltaX;
         currentY += deltaY;
-
         currentX = Math.min(window.innerWidth - 150, Math.max(0, currentX));
         currentY = Math.min(window.innerHeight - 150, Math.max(0, currentY));
-
         bird.style.left = `${currentX}px`;
         bird.style.top = `${currentY}px`;
-
         moveCount++;
         setTimeout(moveBird, 300);
       } else {
-        // Chim đậu ngay phía trên hòm thư
         bird.style.left = `${finalX}px`;
         bird.style.top = `${finalY}px`;
-
-        // Dừng vỗ cánh và phát chuông
         flapSound.pause();
         flapSound.currentTime = 0;
         flapSound.style.display = "none";
         bellSound.play();
-
         setTimeout(() => {
           message.style.opacity = 1;
           document.getElementById("thongbao").style.display = "block";
-          // Hiện nút mở thư sau 1 giây
           setTimeout(() => {
-            document.getElementById("openLetterBtn").style.display = "block";
+            openLetterBtn.style.display = "block";
           }, 1000);
-        }, 800);               
+        }, 800);
       }
     }
-    openLetterBtn.addEventListener("click", () => {
-      document.getElementById("bird").style.display = "none";
-      document.getElementById("message").style.display = "none";
-      document.getElementById("homthu").style.display = "none";
-      document.getElementById("nha").style.display = "none";
-      document.getElementById("dammay").style.display = "none";
-      document.getElementById("dammay2").style.display = "none";
-      document.getElementById("mattroi").style.display = "none";
-      document.getElementById("honuoc").style.display = "none";
-      document.getElementById("thongbao").style.display = "none";
-      openLetterBtn.style.display = "none";
 
-      // Hiện ảnh thư
-      letterPaper.style.display = "block";
+    openLetterBtn.addEventListener("click", () => {
+      mainScreen.classList.add("fade-out");
+      openLetterBtn.style.display = "none";
+      setTimeout(() => {
+        mainScreen.style.display = "none";
+        letterPaper.classList.add("show");
+      }, 1000);
     });
   </script>
 </body>
