--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   <audio id="bellSound" src="tiengchuong.mp3"></audio>
   <audio id="helloSound" src="hello.mp3"></audio>
 
-  <button id="openLetterBtn">Ấn vào đây để mở thư nha</button>
+  <button id="openLetterBtn">Ấn vào đây để mở thư nha ><</button>
   <img id="letterPaper" src="paper.jpg" alt="Nội dung thư" />
 
   <script>
