--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #f8f1f6;
+      background-color: #ffe6f0;
       height: 100vh;
       overflow: hidden;
       font-family: 'Courier New', monospace;
@@ -46,7 +46,7 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      background-color: #f8f1f6;
+      background-color: #ffe6f0;
       display: none;
       flex-direction: column;
       align-items: center;
