--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
     const introScreen = document.getElementById("introScreen");
     const loadGif = document.getElementById("loadGif");
     const startIntroBtn = document.getElementById("startIntroBtn");
+    const introControls = document.getElementById("introControls");
     const welcomeScreen = document.getElementById("welcomeScreen");
     const helloSound = document.getElementById("helloSound");
     const startBtn = document.getElementById("startBtn");
