--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     window.onload = () => {
       setTimeout(() => {
         loadGif.style.display = "none";
-        document.getElementById("introControls").style.display = "flex"; // Hiện cả icon + nút
+        introControls.style.display = "flex";
       }, 2500);
     };
 
