--- a/index.html
+++ b/index.html
@@ -198,19 +198,7 @@
       display: block;
       opacity: 1;
     }
-    #introControls {
-      display: none; /* Ẩn ban đầu */
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      margin-top: 20px;
-      justify-content: center;
-    }
 
-    #clickIcon {
-      width: 60px;
-      height: auto;
-    }
     audio, video {
       display: none;
     }
@@ -221,10 +209,7 @@
   <!-- Màn hình mở đầu -->
   <div id="introScreen">
     <img id="loadGif" src="load.gif" alt="Loading..." />
-    <div id="introControls">
-      <img id="clickIcon" src="click.png" alt="Click icon" />
-      <button id="startIntroBtn">Start</button>
-    </div>
+    <button id="startIntroBtn">Start</button>
     <audio id="helloSound" src="hello.mp3"></audio>
   </div>
 
@@ -257,7 +242,6 @@
     const introScreen = document.getElementById("introScreen");
     const loadGif = document.getElementById("loadGif");
     const startIntroBtn = document.getElementById("startIntroBtn");
-    const introControls = document.getElementById("introControls");
     const welcomeScreen = document.getElementById("welcomeScreen");
     const helloSound = document.getElementById("helloSound");
     const startBtn = document.getElementById("startBtn");
@@ -283,7 +267,7 @@
     window.onload = () => {
       setTimeout(() => {
         loadGif.style.display = "none";
-        introControls.style.display = "flex";
+        startIntroBtn.style.display = "block";
       }, 2500);
     };
 
