--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
   <!-- Màn hình mở đầu -->
   <div id="introScreen">
     <img id="loadGif" src="load.gif" alt="Loading..." />
-    <button id="startIntroBtn">Start</button>
+    <button id="startIntroBtn">👉Start👈</button>
     <audio id="helloSound" src="hello.mp3"></audio>
   </div>
 
