--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
   <!-- Màn hình chào -->
   <div id="welcomeScreen">
     <img id="welcomeImg" src="hellocutee.gif" alt="Xin chào" />
-    <button id="startBtn">Click vào đây đi 🙈!!</button>
+    <button id="startBtn">Click tiếp vào đây nèe !!!</button>
   </div>
 
   <!-- Màn hình chính -->
