--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <img id="honuoc" src="honuoc.png" alt="Hồ nước" />
     <img id="thongbao" src="thongbao.png" alt="Thông báo" />
     <img id="bird" src="bocauduathu.gif" alt="Chim bồ câu" />
-    <div id="message">Thảo ơi! cậu có thư này💌!</div>
+    <div id="message">Thảo ơi! cậu có thư này💌</div>
   </div>
 
   <audio id="flapSound" src="dapcanh.mp3"></audio>
