--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
   <audio id="bellSound" src="tiengchuong.mp3"></audio>
 
   <button id="openLetterBtn">Ấn vào đây để mở thư nha ><</button>
-  <img id="letterCover" src="biathua.jpg" alt="Bìa thư" />
+  <img id="letterCover" src="biathu.jpg" alt="Bìa thư" />
   <img id="letterContent" src="noidungthu.jpg" alt="Nội dung thư" />
 
   <script>
